<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_add_design"
    android:padding="20dp">

    <TextView
        android:id="@+id/customerListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_customer"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_margin="15dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:background="@drawable/rounded_edittext"
        />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:hint="@string/enter_phone"
        android:maxLength="10"
        android:inputType="phone"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_edittext"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        android:background="@drawable/rounded_button"
        />
</LinearLayout>
