<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0f94a5">

    <TextView
        android:id="@+id/customerListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_list"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/search"
        android:layout_margin="12dp"
        android:textSize="13sp"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/customerListText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/rounded_recyler_view"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addButton"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:text="@string/add_customer"
        android:background="@drawable/rounded_button"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
